// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130910,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 130814,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 266240,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 293896,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 307222,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 282258,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212237,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 212113,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 235958,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 211067,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 367756,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 210898,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 345905,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 309316,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 287573,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 180524,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 188941,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225664,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194881,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 225732,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 194834,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 373460,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 259565,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 358411,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 250269,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 288575,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 263897,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 291916,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 369137,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 389256,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 336813,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 384452,
}
`;
